--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
 }
 
 .display {
-  background-color: #1E1E3B;
+  background-color: #242526;
   height: 115px;
   color: white;
 }
@@ -78,6 +78,9 @@ body {
   background-color: #FC5849;
 }
 
+.equals:hover {
+  background-color: #FF8175;
+}
 .zero {
   float: left;
   width: 125px;
@@ -92,6 +95,15 @@ body {
   background-color: #3B5170;
 }
 
+.num:hover {
+  background-color: #40597A;
+}
+
 .arithmetic {
   background-color: #344863;
+  color: lightblue;
+}
+
+.arithmetic:hover {
+  background-color: #4C607A;
 }
